Change vw to % to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: minmax(7vh, 2fr) 5fr 2fr;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .main__container {
